# silva-framework

./: Dockerfile  LICENSE.md  README.md  README_EN.md  SECURITY.md  docker-compose.yml  pyproject.toml
container/: requirements.txt
docs/: desenvolvimento.md
silva-framework/silva/core/: app.py  server.py
silva-framework/silva/router/: router.py
silva-framework/tests/ws/: ws.py
